--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>FORM</title>
+    <title>YourQuotes</title>
     <style>
       body {
         background-color: rgb(145, 164, 179);
@@ -62,7 +62,7 @@
   </head>
   <body>
     <form action="/api/v1/register" method="POST">
-      <h1>REGISTER</h1>
+      <h1>Register with Your beautiful Quotes</h1>
       <input placeholder="Enter Your Name" type="text" name="name" id="name" />
       <input
         placeholder="Enter Your Email"
@@ -76,7 +76,14 @@
         name="password"
         id="password"
       />
+      <input
+        placeholder="Enter Your Quote"
+        type="text"
+        name="userQuote"
+        id="userQuote"
+      />
       <input type="submit" value="Login" />
     </form>
+    
   </body>
 </html>
